sonar fix