@@ -111,7 +111,9 @@
 		  <sonar.projectKey>RamonDiazRodrigo_SIGET_Equipo1</sonar.projectKey>
 		<sonar.organization>agendae5</sonar.organization>
 		 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<argLine>${surefireArgLine} -Xmx1024m -XX:MaxPermSize=1024m</argLine>
+		 <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 	
 
   
@@ -138,7 +140,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
+				<version>3.0.0-M5</version>
 				<configuration>
 					<forkedProcessExitTimeoutInSeconds>300</forkedProcessExitTimeoutInSeconds>
 					<forkCount>1</forkCount>
@@ -149,24 +151,36 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.9</version>
-				<executions>
-					<execution>
-						<id>prepare-unit-tests</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<append>true</append>
-							<destFile>${sonar.jacoco.reportPath}</destFile>
-							<!-- Sets the VM argument line used when unit tests are run. -->
-							<propertyName>surefireArgLine</propertyName>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+  
+    <configuration>
+        <skip>${maven.test.skip}</skip>
+        <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+        <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+        <output>file</output>
+        <append>true</append>
+        <excludes>
+            <exclude>*MethodAccess</exclude>
+        </excludes>
+    </configuration>
+    <executions>
+        <execution>
+            <id>jacoco-initialize</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+            <phase>test-compile</phase>
+        </execution>
+        <execution>
+            <id>jacoco-site</id>
+            <phase>verify</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
